--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "go": "^3.0.1",
     "node": "^15.4.0",
     "node-cmd": "^4.0.0",
-    "nodejs": "0.0.0",
-    "npm": "^7.3.0"
+    "nodejs": "0.0.0"
   }
 }
