--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pipeboard",
+  "name": "pipeboard-0.1.1",
   "version": "0.1.1",
   "description": "Pipeboard for NPM! - The best all in one PHP environment manager, web dashboard and app manager software for website development and hosting on terminal platforms.",
   "main": "system/main.js",
