--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ os: linux
 dist: xenial
 before_script:
   - npm install
+  - apt-get docker
 after_install:
   - pipeboard check
   - pipeboard setup -usedefaults
