--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,11 @@ language:
   - node_js
 node_js: 14
 npm: 6.14.10
-nvm: 0.37.2
 os: linux
 dist: xenial
 before_script:
-  - npm install
-  - sudo apt-get install docker
-  - 
+  - source ./installers/cli.sh
+  - pipeboard prep
 after_script:
   # - pipeboard check
   # - pipeboard setup -usedefaults
