--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "pipeboard-0.1.3",
+  "name": "pipeboard",
   "version": "0.1.3",
   "description": "Pipeboard for NPM! - The best all in one PHP environment manager, web dashboard and app manager software for website development and hosting on terminal platforms.",
   "main": "system/main.js",
   "scripts": {
-    "test": "node system/main.js"
+    "test": "source ./installers/cli.sh and pipeboard run",
+    "postinstall": "source ./installers/cli.sh",
+    "start": "pipeboard start",
+    "refresh": "source ./installers/cli.sh"
   },
   "repository": {
     "type": "git",
@@ -31,10 +34,9 @@
   "homepage": "https://pipeboard.org",
   "dependencies": {
     "dockerode": "^3.2.1",
-    "express": "^4.17.1",
     "node-bin-setup": "^1.0.6",
     "node-cmd": "^4.0.0",
-    "nodejs": "0.0.0",
+    "nodejs": "latest",
     "socket.io": "^3.0.4"
   }
 }
