--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Pipeboard for NPM! - The best all in one PHP environment manager, web dashboard and app manager software for website development and hosting on terminal platforms.",
   "main": "system/main.js",
   "scripts": {
-    "test": "source ./installers/cli.sh and pipeboard run",
+    "test": "source ./installers/cli.sh and pipeboard prep and pipeboard run",
     "postinstall": "source installers/cli.sh",
     "start": "pipeboard start",
     "cli-refresh": "source installers/cli.sh"
