--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "prep": "pipeboard prep",
     "start": "pipeboard run"
   },
+  "bin": {
+    "pipeboard": "bin/pipeboard",
+    "pipeboard-tester": "bin/pipeboard-tester",
+    "pipeboard-releaser": "bin/pipeboard-releaser"
+  },
   "repository": {
     "type": "git",
     "url": "git://github.com/Pipeboard/Pipeboard.git"
@@ -33,7 +38,10 @@
   },
   "homepage": "https://pipeboard.org",
   "dependencies": {
+    "arg": "^5.0.0",
     "dockerode": "^3.2.1",
+    "esm": "^3.2.25",
+    "inquirer": "^7.3.3",
     "node-bin-setup": "^1.0.6",
     "node-cmd": "^4.0.0",
     "nodejs": "latest",
