--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pipeboard",
   "version": "0.1.3",
   "description": "The best all in one PHP environment manager, web dashboard and app manager software for website development and hosting on terminal platforms.",
-  "main": "system/main.js",
+  "main": "src/system/main.js",
   "scripts": {
     "test": "pipeboard prep and pipeboard run",
     "run": "pipeboard run",
@@ -41,10 +41,14 @@
     "arg": "^5.0.0",
     "dockerode": "^3.2.1",
     "esm": "^3.2.25",
+    "fs": "^0.0.1-security",
+    "http": "^0.0.1-security",
     "inquirer": "^7.3.3",
     "node-bin-setup": "^1.0.6",
     "node-cmd": "^4.0.0",
     "nodejs": "latest",
-    "socket.io": "^3.0.4"
+    "path": "^0.12.7",
+    "socket.io": "^3.0.4",
+    "xmlhttprequest": "^1.8.0"
   }
 }
