--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.3",
   "description": "The best all in one PHP environment manager, web dashboard and app manager software for website development and hosting on terminal platforms.",
   "main": "src/system/main.js",
+  "dir": "./",
   "scripts": {
     "test": "pipeboard prep and pipeboard run",
     "run": "pipeboard run",
@@ -41,12 +42,9 @@
     "adm-zip": "^0.5.1",
     "arg": "^5.0.0",
     "dockerode": "^3.2.1",
-    "esm": "^3.2.25",
+    "esm": "^3.2.18",
     "fs": "^0.0.1-security",
-    "fstream": "^1.0.12",
-    "inquirer": "^7.3.3",
     "node-bin-setup": "^1.0.6",
-    "node-cmd": "^4.0.0",
     "nodejs": "latest",
     "path": "^0.12.7",
     "request": "^2.88.2",
