--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,8 @@ npm: 6.14.10
 os: linux
 dist: xenial
 script:
-  - npm run test
+  - npm i
+  - npm link
+  - pipeboard-tester
 cache:
   npm: false
-env:
-  global:
-    - PIPEBOARD_FULLY_UPDATED=1
-    - PIPEBOARD_INSTALL=GITHUB
