--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "src/system/main.js",
   "dir": "./",
   "scripts": {
-    "postinstall": "npm link",
-    "test": "pipeboard-tester",
+    "postinstall": "sudo npm link",
+    "test": "sudo pipeboard-tester",
     "run": "pipeboard run",
     "start": "pipeboard run"
   },
