--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,6 @@ npm: 6.14.10
 os: linux
 dist: xenial
 script:
-  - npm i
-  - npm link
-  - pipeboard-tester
+  - npm run travis-test
 cache:
   npm: false
