--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "run": "pipeboard run",
     "start": "pipeboard run",
     "circleci_test": "sudo npm link | sudo pipeboard-tester",
-    "travis_test": "npm link | sudo pipeboard-tester"
+    "travis_test": "npm i | npm link | sudo pipeboard-tester"
   },
   "bin": {
     "pipeboard": "bin/pipeboard",
