--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "pipeboard-tester",
     "run": "pipeboard run",
     "start": "pipeboard run",
-    "circleci_test": "sudo npm link | sudo pipeboard-tester",
+    "circleci_test": "npm i | sudo npm link | sudo pipeboard-tester",
     "travis_test": "npm i | npm link | sudo pipeboard-tester"
   },
   "bin": {
