--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,17 @@
 version: 2.1
 jobs:
-  test:
-    docker:
-      - image: circleci/node@3.0.0
+  run-test:
+    machine:
+      image: ubuntu-2004:202010-01
     steps:
-      - run: npm i
+      - execute-test
+commands:
+  execute-test:
+    description: "Test command for testing pipeboard on CircleCI."
+    steps:
       - run: npm run circleci_test
 workflows:
-  tester:
-    jobs:
-      - test
+   version: 2
+   test:
+     jobs:
+       - run-test
