--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,8 @@
 version: 2.1
 jobs:
   run-test:
-    machine:
-      image: ubuntu-2004:202010-01
+    docker:
+      - image: ubuntu
     steps:
       - execute-test
 commands:
