--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,10 +4,15 @@ jobs:
     docker:
       - image: ubuntu
     steps:
+      - prep-test
       - execute-test
 commands:
+  prep-test:
+    steps:
+      - run: apt-get install npm
+      - run: apt-get install nodejs
+      - run: npm install
   execute-test:
-    description: "Test command for testing pipeboard on CircleCI."
     steps:
       - run: npm run circleci_test
 workflows:
