--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,8 +9,8 @@ jobs:
 commands:
   prep-test:
     steps:
-      - run: apt-get install npm
-      - run: apt-get install nodejs
+      - run: apt-get update
+      - run: apt-get install npm nodejs
       - run: npm install
   execute-test:
     steps:
