--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,9 +9,13 @@ jobs:
 commands:
   prep-test:
     steps:
-      - run: apt-get update | apt-get install curl
-      - run: curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add && echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
-      - run: yarn update | yarn install npm && npm install
+      - run: apt-get update
+      - run: apt-get install wget
+      - run: wget -qO- https://raw.githubusercontent.com/nvm-sh/nvm/v0.37.2/install.sh | bash
+      - run: export NVM_DIR="$([ -z "${XDG_CONFIG_HOME-}" ] && printf %s "${HOME}/.nvm" || printf %s "${XDG_CONFIG_HOME}/nvm")" [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+      - run: source ~/.bash_profile
+      - run: nvm install node
+      - run: npm install
   execute-test:
     steps:
       - run: npm run circleci_test
