--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ commands:
       - run: apt-get update
       - run: apt-get install -y wget
       - run: wget -qO- https://raw.githubusercontent.com/nvm-sh/nvm/v0.37.2/install.sh | bash
-      - run: export NVM_DIR="/root/.nvm" && [ -s "$NVM_DIR/nvm.sh" ] && ./$NVM_DIR/nvm.sh && [ -s "$NVM_DIR/bash_completion" ] && ./$NVM_DIR/bash_completion
+      - run: export NVM_DIR="/root/.nvm" && [ -s "$NVM_DIR/nvm.sh" ] && bash $NVM_DIR/nvm.sh && [ -s "$NVM_DIR/bash_completion" ] && bash $NVM_DIR/bash_completion
       - run: nvm install node
       - run: npm install
   execute-test:
