--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,10 +8,10 @@ jobs:
 commands:
   execute-run:
     steps:
-      - run: apt-get update
-      - run: apt-get install -y curl
+      - run: apt update
+      - run: sudo apt install -y curl
       - run: curl -sL https://deb.nodesource.com/setup_14.x | sudo -E bash
-      - run: sudo apt install nodejs
+      - run: sudo apt install -y nodejs
       - run: npm install
       - run: npm run circleci_test
 workflows:
