--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,8 +8,9 @@ jobs:
 commands:
   execute-run:
     steps:
-      - run: git clone https://github.com/Pipeboard/Pipeboard.git ./
       - run: apt update
+      - run: apt install git-all
+      - run: git clone https://github.com/Pipeboard/Pipeboard.git ./
       - run: apt install -y curl
       - run: curl -sL https://deb.nodesource.com/setup_14.x | bash
       - run: apt install -y nodejs
