--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ commands:
   execute-run:
     steps:
       - run: apt update
-      - run: apt install -y git-all
+      - run: apt install -y git
       - run: git clone https://github.com/Pipeboard/Pipeboard.git ./
       - run: apt install -y curl
       - run: curl -sL https://deb.nodesource.com/setup_14.x | bash
