--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ commands:
       - run: curl -sL https://deb.nodesource.com/setup_14.x | bash
       - run: apt install -y nodejs
       - run: npm install
-      - run: npm run circleci_test
+      - run: npm run test
 workflows:
    version: 2
    test:
