--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/system/main.js",
   "scripts": {
     "postinstall": "npm link",
-    "test": "pipeboard-tester",
+    "test": "npm link && pipeboard-tester",
     "run": "pipeboard run",
     "start": "pipeboard run"
   },
