--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,12 +8,11 @@ jobs:
 commands:
   execute-run:
     steps:
-      - run: apt update
-      - run: apt install -y git sudo curl nodejs
+      - run: DEBIAN_FRONTEND=noninteractive
+      - run: apt update && apt install -y git sudo curl nodejs
       - run: git clone https://github.com/Pipeboard/Pipeboard.git ./
       - run: curl -sL https://deb.nodesource.com/setup_14.x | bash
-      - run: npm install -g .
-      - run: npm run run
+      - run: npm install -g . | npm run run
 workflows:
    version: 2
    test:
