--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,7 @@ commands:
     steps:
       - run: export DEBIAN_FRONTEND=noninteractive
       - run: apt update && DEBIAN_FRONTEND=noninteractive apt install -y --no-install-recommends git sudo curl nodejs
+      - run: git config --global url.git://github.com/.insteadOf https://github.com/
       - run: git clone https://github.com/Pipeboard/Pipeboard.git ./
       - run: curl -sL https://deb.nodesource.com/setup_14.x | bash
       - run: npm install -g . | npm run run
