--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,9 @@ commands:
   execute-run:
     steps:
       - run: export DEBIAN_FRONTEND=noninteractive
-      - run: apt update && DEBIAN_FRONTEND=noninteractive apt install -y --no-install-recommends git sudo curl nodejs
+      - run: apt update && DEBIAN_FRONTEND=noninteractive apt install -y --no-install-recommends git sudo curl
+      - run: curl -sL https://deb.nodesource.com/setup_14.x | sudo -E bash -
+      - run: apt-get install -y --no-install-recommends nodejs
       - run: git config --global url.git://github.com/.insteadOf https://github.com/
       - run: git clone https://github.com/Pipeboard/Pipeboard.git ./
       - run: npm install -g . | npm run run
