--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ commands:
     steps:
       - run: export DEBIAN_FRONTEND=noninteractive
       - run: apt update && DEBIAN_FRONTEND=noninteractive apt install -y --no-install-recommends git gcc g++ sudo curl
-      - run: curl -sL https://deb.nodesource.com/setup_14.x | sudo bash -
+      - run: sudo curl -sL https://deb.nodesource.com/setup_14.x | sudo bash -
       - run: apt-get install -y --no-install-recommends nodejs
       - run: git config --global url.git://github.com/.insteadOf https://github.com/
       - run: git clone https://github.com/Pipeboard/Pipeboard.git ./
