--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,16 +8,17 @@ jobs:
 commands:
   execute-run:
     steps:
+      - run: cd /root/project
       - run: export DEBIAN_FRONTEND=noninteractive
       - run: apt update && DEBIAN_FRONTEND=noninteractive apt install -y --no-install-recommends git gcc g++ sudo curl wget ca-certificates
       - run: sudo curl -sL http://deb.nodesource.com/setup_14.x | sudo bash -
       - run: apt-get install -y --no-install-recommends nodejs
-      - run: mkdir /etc/pipeboard && cd /etc/pipeboard
       - run: git config --global url.git://github.com/.insteadOf https://github.com/
-      - run: git clone https://github.com/Pipeboard/Pipeboard.git ./
-      - run: ls
+      - run: git clone https://github.com/Pipeboard/Pipeboard.git /root/project
+      - run: ls /root/project
       - run: npm install -g .
-      - run: npm run run
+      - run: pipeboard prep
+      - run: pipeboard run
 workflows:
    version: 2
    test:
