--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ commands:
       - run: git config --global url.git://github.com/.insteadOf https://github.com/ && git clone --single-branch --branch "dev-citesting" https://github.com/Pipeboard/Pipeboard.git /root/project
       - run: ls /root/project
       - run: npm install -g .
-      - run: pipeboard prep && pipeboard run
+      - run: pipeboard prep && pipeboard run --close-after 5
 workflows:
    version: 2
    test:
