--- a/.github/workflows/test.js.yml
+++ b/.github/workflows/test.js.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
 name: Github CI
 
 on:
@@ -14,13 +11,14 @@ jobs:
     runs-on: ubuntu-18.04
     strategy:
       matrix:
-        node-version: [12.x, 14.x, 15.x]
+        node-version: [14.x]
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm ci
-    - run: npm install -g .
-    - run: pipeboard prep && pipeboard run --close-after 5
+    - run: sudo npm ci
+    - run: sudo npm install -g .
+    - run: sudo pipeboard prep
+    - run: sudo pipeboard run --close-after 5
